Criando Banco de Dados

--- a/ToDoList/appsettings.json
+++ b/ToDoList/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "DefaultConnection": "server=Eiji; database=Tarefas; trusted_connection=true; trustservercertificate=true;"
+  },
   "AllowedHosts": "*"
 }
