--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,26 +2,28 @@ version: "3.9"
 
 services:
   sqlserver:
-    image: mcr.microsoft.com/mssql/server:2019-latest
+    image: mcr.microsoft.com/mssql/server:2022-latest
+    container_name: todolist-sqlserver
     environment:
       SA_PASSWORD: "YourStrong!Passw0rd"
       ACCEPT_EULA: "Y"
     ports:
       - "1433:1433"
     healthcheck:
-      test: ["CMD", "/opt/mssql-tools/bin/sqlcmd", "-S", "localhost", "-U", "sa", "-P", "YourStrong!Passw0rd", "-Q", "SELECT 1"]
+      test: ["CMD-SHELL", "echo 'SELECT 1' | /opt/mssql-tools/bin/sqlcmd -S localhost -U sa -P YourStrong!Passw0rd"]
       interval: 15s
       timeout: 10s
       retries: 10
 
   todolist-api:
+    container_name: todolist-api
     build:
       context: .
       dockerfile: Dockerfile
-    ports:
-      - "5000:80"
     depends_on:
       sqlserver:
         condition: service_healthy
     environment:
       - ConnectionStrings__DefaultConnection=Server=sqlserver;Database=Tarefas;User=sa;Password=YourStrong!Passw0rd;TrustServerCertificate=True;
+    ports:
+      - "5028:80"
